overflow responsive fix

--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -47,12 +47,12 @@
   display: block;
 }
 @font-face {
-  font-family: 'Asciid';
-  src: url('../font/asciid.ttf') format('truetype');
+  font-family: "Asciid";
+  src: url("../font/asciid.ttf") format("truetype");
 }
 @font-face {
-  font-family: 'Slowdex';
-  src: url('../font/Slowdex.ttf') format('truetype');
+  font-family: "Slowdex";
+  src: url("../font/Slowdex.ttf") format("truetype");
 }
 
 .partOne {
@@ -61,7 +61,7 @@
   height: 100%;
 }
 .partOne h1 {
-  font-family: 'Slowdex', sans-serif;
+  font-family: "Slowdex", sans-serif;
   font-size: 120px;
   font-weight: 700;
   margin: 0;
@@ -70,7 +70,7 @@
 }
 .partOne h2,
 .partOne h3 {
-  font-family: 'Slowdex', sans-serif;
+  font-family: "Slowdex", sans-serif;
   font-size: 60px;
   font-weight: 700;
   margin: 0;
@@ -108,3 +108,6 @@ hr {
   }
 }
 /* 657 */
+@media screen and (max-height: 670px) {
+
+}
